source/services/ComponentRegistry/ownimpl/k8s/compreg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: compreg
  name: compreg
spec:
  selector:
    matchLabels:
      app: compreg
  replicas: 1
  template:
    metadata:
      labels:
        app: compreg
    spec:
      containers:
      - name: compreg
        #command: ["/bin/sh"]
        #args: ["-c", "sleep 3600"]
        image: feridock/compreg:0.1.0
        imagePullPolicy: Always
        volumeMounts:
        - name: compreg-volume
          mountPath: "/data"
      volumes:
      - name: compreg-volume
        persistentVolumeClaim:
          claimName: compreg-pvc
